// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-bg-cells renders default 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--safc">
  <mock:shadow-root>
    <div class="ld-bg-cells__pattern" part="pattern" style="--ld-bg-cells-image: url(/assets/safc-cell.svg);"></div>
    <div class="ld-bg-cells__content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with content 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--safc">
  <mock:shadow-root>
    <div class="ld-bg-cells__pattern" part="pattern" style="--ld-bg-cells-image: url(/assets/safc-cell.svg);"></div>
    <div class="ld-bg-cells__content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <p>
    I am content
  </p>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with explicit type 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--millipore" type="millipore">
  <mock:shadow-root>
    <div class="ld-bg-cells__pattern" part="pattern" style="--ld-bg-cells-image: url(/assets/millipore-cell.svg);"></div>
    <div class="ld-bg-cells__content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
</ld-bg-cells>
`;

exports[`ld-bg-cells renders with repeat 1`] = `
<ld-bg-cells class="ld-bg-cells ld-bg-cells--safc" repeat="">
  <mock:shadow-root>
    <div class="ld-bg-cells__pattern" part="pattern" style="--ld-bg-cells-image: url(/assets/safc-cell.svg);"></div>
    <div class="ld-bg-cells__content" part="content">
      <slot></slot>
    </div>
  </mock:shadow-root>
</ld-bg-cells>
`;
